Fixed a hack that made the hamburger icon look bad on mobile devices, added more information to the about me blurb

--- a/_sass/_mobile-header.scss
+++ b/_sass/_mobile-header.scss
@@ -77,12 +77,3 @@
 	}
 
 }
-
-// Hack for a long author name
-@media only screen and (max-width: 430px) {
-
-.site-title {
-		width: 250px;
-	}
-
-}
